--- a/main.html
+++ b/main.html
@@ -33,6 +33,8 @@
 			<h1 style="font-size: 24px;font-weight: 600;">Стартовый шаблон для верстки</h1>
 		</div>
 
+		<button data-modal-open="consultation">Open consultation</button>
+		<button data-modal-open="callback">Open callback</button>
 	</div>
 
 	<!-- Модальные окна -->
